@@ -7,6 +7,7 @@ Bundle-Vendor: Open-Xchange Inc.
 Bundle-RequiredExecutionEnvironment: JavaSE-1.6
 Import-Package: com.openexchange.ajax,
  com.openexchange.config,
+ com.openexchange.config.cascade,
  com.openexchange.configuration,
  com.openexchange.dispatcher,
  com.openexchange.exception,
