@@ -1,3 +1,7 @@
+* 2014-03-26 - thorben.betten@open-xchange.com
+
+ - Fix for bug 31770: Retrieve deferrer URL from config-cascade look-up
+
 * 2014-03-25 - thorben.betten@open-xchange.com
 
  - Fix for bug 31747: Added property to adjust JVM XML entityExpansionLimit o certain needs
